--- a/nekocl.css
+++ b/nekocl.css
@@ -14,6 +14,7 @@
 	background-color:#1e1e1e;
 	padding:10px;
 	margin-bottom:20px;
+	border-radius:25px;
 }
 
 main {
@@ -52,6 +53,7 @@ a {
 		margin:3px;
 		background-color:#1e1e1e;
 		color:white;
+		border-radius:5px;
             }
 
             .scrollbar p {
